--- a/Website/header.html
+++ b/Website/header.html
@@ -6,5 +6,11 @@
     <div id="website-banner">
         <img src="resources/raketech-logo.jpg" alt="Raketech Logo">
         <h1>HR Feedback Web App</h1>
+        <div class="faq-summary-text">
+            <button type="header-button" name="home-button" class="header-button"><a href="">Home</a></button>
+            <button type="input-button" name="home-button" class="input-button"><a href="">Fill Form</a></button>
+            <button type="view-button" name="home-button" class="view-button"><a href="">View Data</a></button>
+            <button type="edit-button" name="home-button" class="edit-button"><a href="">Edit Forms</a></button>
+        </div>
     </div>
 </head>
