--- a/Website/header.html
+++ b/Website/header.html
@@ -7,10 +7,10 @@
         <img src="resources/raketech-logo.jpg" alt="Raketech Logo">
         <h1>HR Feedback Web App</h1>
         <div class="faq-summary-text">
-            <button type="header-button" name="home-button" class="header-button"><a href="">Home</a></button>
-            <button type="header-button" name="input-button" class="header-button"><a href="">Fill Form</a></button>
-            <button type="header-button" name="view-button" class="header-button"><a href="">View Data</a></button>
-            <button type="header-button" name="edit-button" class="header-button"><a href="">Edit Forms</a></button>
+            <button type="header-button" name="home-button" class="header-button"><a href="index.php">Home</a></button>
+            <button type="header-button" name="input-button" class="header-button"><a href="input.php">Fill Form</a></button>
+            <button type="header-button" name="view-button" class="header-button"><a href="view.php">View Data</a></button>
+            <button type="header-button" name="edit-button" class="header-button"><a href="edit.php">Edit Forms</a></button>
         </div>
     </div>
 </head>
