--- a/header.html
+++ b/header.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>HR Feedback Web App</title>
+</head>
+
+<body>
     <div id="website-banner">
         <img src="resources/raketech-logo.jpg" alt="Raketech Logo">
         <h1>HR Feedback Web App</h1>
@@ -14,4 +17,3 @@
             <button type="header-button" name="edit-button" class="header-button"><a href="edit.php">Edit Forms</a></button>
         </div>
     </div>
-</head>
