--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
     <title>HR Feedback Web App</title>
 </head>
 
-<body>
+<header>
     <div id="website-banner">
         <img src="resources/raketech-logo.jpg" alt="Raketech Logo">
         <h1>HR Feedback Web App</h1>
@@ -17,3 +17,4 @@
             <button type="header-button" name="edit-button" class="header-button"><a href="edit.php">Edit Forms</a></button>
         </div>
     </div>
+</header>
