Fixed design for form

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="faq-summary-text">
-        <button type="footer-button" name="footer-home-button" class="footer-button"><a href="index.php">formcreatorhr.com</a></button>
+        <button type="footer-button" name="footer-home-button" class="footer-button"><a href="index.php">To Top</a></button>
     </div>
 </footer>
