New design changes

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,19 @@
 <footer>
+  <!--===============================================================================================-->
+  	<script src="resources/vendor/jquery/jquery-3.2.1.min.js"></script>
+  <!--===============================================================================================-->
+  	<script src="resources/vendor/bootstrap/js/popper.js"></script>
+  	<script src="resources/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!--===============================================================================================-->
+  	<script src="resources/vendor/select2/select2.min.js"></script>
+  	<script>
+  		$(".selection-2").select2({
+  			minimumResultsForSearch: 20,
+  			dropdownParent: $('#dropDownSelect1')
+  		});
+  	</script>
+  <!--===============================================================================================-->
+
     <div class="faq-summary-text">
         <button type="footer-button" name="footer-home-button" class="footer-button"><a href="index.php">To Top</a></button>
     </div>
