--- a/footer.html
+++ b/footer.html
@@ -12,6 +12,8 @@
   			dropdownParent: $('#dropDownSelect1')
   		});
   	</script>
+    <script src="js/main.js"></script>
+
   <!--===============================================================================================-->
 
 </footer>
