--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
   			dropdownParent: $('#dropDownSelect1')
   		});
   	</script>
-    <script src="js/main.js"></script>
+    <script src="resources/js/main.js"></script>
 
   <!--===============================================================================================-->
 
