--- a/header.html
+++ b/header.html
@@ -20,8 +20,13 @@
     	<link rel="stylesheet" type="text/css" href="resources/css/util.css">
     	<link rel="stylesheet" type="text/css" href="resources/css/main.css">
     <!--===============================================================================================-->
+    <script src="resources/js/bootstrap.js"></script>
+    <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.css"></script> 
+
+
     <script src="resources/js/bootstrap-slider.js"></script>
-    <script src="resources/css/bootstrap-slider.css"></script>  
+    <link rel="stylesheet" type="text/css" href="resources/css/bootstrap-slider.css"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
